half-sec-update

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
-    <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/value-sec.css">
     <title>Document</title>
 </head>
@@ -238,13 +238,13 @@
             </div>
         </div>
     </section>
-    <section class="storage-sec half-sec content-right">
+    <section class="half-sec half-sec-s2 content-right">
         <div class="container">
             <div class="row g-3">
                 <div class="col-xl-6">
                     <div class="image-wrapper">
-                        <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
-                            style="max-width: 595px;" width="595" height="517" alt="">
+                        <img src="./assets/storage-image-left.webp" class="sec-img d-block mx-auto img-fluid"
+                            style="max-width: 595px;" width="595" height="517" alt="storage-image">
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -333,7 +333,7 @@
         <div class="container">
             <div class="row gy-lg-0 gy-3">
                 <div class="col-lg-6">
-                    <img style="max-width: 472px;" src="./assets/global-image.webp" class="img-fluid mx-auto d-block"
+                    <img style="max-width: 472px;" src="./assets/global-image.webp" class="sec-img img-fluid mx-auto d-block"
                         width="472" height="472" alt="global-image">
                 </div>
                 <div class="col-lg-6">
