--- a/collection.html
+++ b/collection.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/circle-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
-    <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/faq.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
@@ -418,13 +418,13 @@
             </div>
         </div>
     </section>
-    <section class="storage-sec half-sec content-right pb-0">
+    <section class="half-sec half-sec-s2 content-right pb-0">
         <div class="container">
             <div class="row g-3">
                 <div class="col-xl-6">
                     <div class="image-wrapper">
-                        <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
-                            style="max-width: 595px;" width="595" height="517" alt="">
+                        <img src="./assets/storage-image-left.webp" class="sec-img d-block mx-auto img-fluid"
+                            style="max-width: 595px;" width="595" height="517" alt="storage-image">
                     </div>
                 </div>
                 <div class="col-xl-6">
