--- a/contact-us.html
+++ b/contact-us.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
-    <link rel="stylesheet" href="./assets/demand-sec.css">
+    <link rel="stylesheet" href="./assets/full-half-sec.css">
     <title>Document</title>
 </head>
 
@@ -150,7 +151,7 @@
             </div>
         </div>
     </section>
-    <section class="demand-sec half-sec content-left content-right pb-0">
+    <section class="full-half-sec half-sec content-left content-right pb-0">
         <div class="row">
             <div class="col-lg-6">
                 <div class="left-image-wrapper">
