--- a/model.html
+++ b/model.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="./assets/theme_styles.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
     <link rel="stylesheet" href="./assets/hero-sec.css">
-    <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
     <link rel="stylesheet" href="./assets/rackmonut-sec.css">
-    <link rel="stylesheet" href="./assets/spacification-sec.css">
     <link rel="stylesheet" href="./assets/businnes-sec.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
@@ -258,13 +257,13 @@
             </div>
         </div>
     </section>
-    <section class="storage-sec half-sec content-right pb-0">
+    <section class="half-sec half-sec-s2 content-right pb-0">
         <div class="container">
             <div class="row g-3">
                 <div class="col-xl-6">
                     <div class="image-wrapper">
-                        <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
-                            style="max-width: 595px;" width="595" height="517" alt="">
+                        <img src="./assets/storage-image-left.webp" class="sec-img d-block mx-auto img-fluid"
+                            style="max-width: 595px;" width="595" height="517" alt="storage-image">
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -325,7 +324,7 @@
             <a href="#" class="d-block btn btn-primary mx-auto">Load More</a>
         </div>
     </section>
-    <section class="default-sec half-sec content-left spacification-sec">
+    <section class="default-sec half-sec content-left">
         <div class="container">
             <div class="row gy-lg-0 gx-lg-5 gy-3 gx-0">
                 <div class="col-lg-6 order-lg-2">
@@ -358,7 +357,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
-                    <img src="./assets/spacification-img.webp" class="d-block img-fluid mx-auto"
+                    <img src="./assets/spacification-img.webp" class="sec-img d-block img-fluid mx-auto"
                         style="border-radius: 18px; max-width: 530px;" width="530" height="666"
                         alt="spacification-image">
                 </div>
