--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
     <link rel="stylesheet" href="./assets/excess-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
@@ -197,7 +198,7 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <img style="max-width: 565px; border-radius: 12px;" src="./assets/products-img-2.webp"
-                        class="img-fluid mx-auto d-block" width="565" height="421" alt="products-image">
+                        class="sec-img img-fluid mx-auto d-block" width="565" height="421" alt="products-image">
                 </div>
                 <div class="col-12 order-lg-2">
                     <p>Vadim Nevelskiy leads our Dell product team, and with over 1.3 million systems and
@@ -455,7 +456,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <img style="max-width: 505px; border-radius: 8px;" src="./assets/products-img-4.webp"
-                        class="img-fluid mx-auto d-block" width="505" height="556" alt="products-image-3">
+                        class="sec-img img-fluid mx-auto d-block" width="505" height="556" alt="products-image-3">
                 </div>
             </div>
         </div>
