--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
     <link rel="stylesheet" href="./assets/hero-sec.css">
+    <link rel="stylesheet" href="./assets/brand-sec.css">
+    <link rel="stylesheet" href="./assets/half-sec.css">
     <link rel="stylesheet" href="./assets/client-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
     <link rel="stylesheet" href="./assets/businnes-sec.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
     <link rel="stylesheet" href="./assets/industry-sec.css">
-    <link rel="stylesheet" href="./assets/storage-sec.css">
-    <link rel="stylesheet" href="./assets/brand-sec.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="announcement-bar">
+        <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
+        <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
+        <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
+    </div>
     <header class="header">
         <div class="header-top">
             <div class="container">
@@ -185,16 +190,16 @@
             </div>
         </div>
     </section>
-    <section class="default-sec half-sec content-right">
+    <section class="default-sec half-sec half-sec-s1 content-right">
         <div class="container">
             <div class="row gy-lg-0 gy-5">
                 <div class="col-lg-6">
-                    <img src="./assets/buying-server-img.webp" class="d-block mx-auto img-fluid"
-                        style="max-width: 500; border-radius: 8px; box-shadow: -12px 12px 0px var(--primary-light-2)"
+                    <img src="./assets/buying-server-img.webp" class="sec-img d-block mx-auto img-fluid"
+                        style="max-width: 500;"
                         width="500" height="390" alt="buying-server-image">
                 </div>
                 <div class="col-lg-6">
-                    <div class="content-wrapper">
+                    <div class="content-wrapper h-100 d-flex flex-column justify-content-center">
                         <h2 class="main-title mb-2">Buying Servers And Networking since 1995</h2>
                         <p>Maximize your IT hardware trade-in, with a trusted, reuse-focused ITAD. Alta has thousands of
                             global clients lined up to re-deploy your excess IT, allowing us to offer you the ultimate
@@ -308,13 +313,13 @@
             </div>
         </div>
     </section>
-    <section class="storage-sec half-sec content-right">
+    <section class="half-sec half-sec-s2 content-right">
         <div class="container">
             <div class="row g-3">
                 <div class="col-xl-6">
                     <div class="image-wrapper">
-                        <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
-                            style="max-width: 595px;" width="595" height="517" alt="">
+                        <img src="./assets/storage-image-left.webp" class="sec-img d-block mx-auto img-fluid"
+                            style="max-width: 595px;" width="595" height="517" alt="storage-image">
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -356,9 +361,9 @@
             </div>
         </div>
     </section>
-    <section class="default-sec half-sec content-right pb-0">
+    <section class="default-sec pb-0">
         <div class="container">
-            <div class="row gy-lg-0 gy-2">
+            <div class="row g-3">
                 <div class="col-lg-6">
                     <img style="max-width: 513px;" src="./assets/hardware-img-1.webp" class="img-fluid d-block mx-auto"
                         width="513" height="350" alt="hardware-image">
@@ -380,9 +385,9 @@
             </div>
         </div>
     </section>
-    <section class="default-sec half-sec content-left pb-0">
+    <section class="default-sec pb-0">
         <div class="container">
-            <div class="row gy-lg-0 gy-2">
+            <div class="row gy-3">
                 <div class="col-lg-6 order-lg-2">
                     <div class="content-wrapper">
                         <h2 class="main-title mb-2">
