--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="announcement-bar">
+    <div style="padding: 10px 0;" class="announcement-bar bg-primary">
         <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
         <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
         <div class="item text-white text-center">ITAD & enterprise IT resale, since 1995</div>
