--- a/collection.html
+++ b/collection.html
@@ -258,7 +258,14 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn btn-primary d-block mx-auto">Explore Our Whole Inventory</a>
+            <ul class="pagination">
+                <li><a href="#"><img src="./assets/pagination-arrow.svg" class="pagination-arrow" width="19" height="14" alt="arrow-icon"></a></li>
+                <li><a href="#" class="active">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#"><img src="./assets/pagination-arrow.svg" class="pagination-arrow" width="19" height="14" alt="arrow-icon"></a></li>
+            </ul>
         </div>
     </section>
     <section class="lenovo-sec">
