--- a/collection.html
+++ b/collection.html
@@ -63,10 +63,10 @@
             <div class="slider-item" style="background-image: url('./assets/hero-bg.webp');">
                 <div class="container">
                     <div class="main-content">
-                        <span class="d-block text-primary fs-14 font-neueplak-semibold mb-3"><a href="/"
-                                style="color: #676767;" class="font-neueplak-regular">Home <img
-                                    src="./assets/breadcrum-arrow.svg" width="14" height="8"
-                                    alt="arrow-icon"></a> Refurbished Lenovo Servers</span>
+                        <ul class="breadcrumb d-flex align-items-center gap-2 mb-3">
+                            <li><a href="/">Home <img src="./assets/breadcrum-arrow.svg" width="18" height="12" alt="arrow-icon"></a></li>
+                            <li><a href="#">Refurbished Lenovo Servers</a></li>
+                        </ul>
                         <div class="row gy-lg-0 gy-5">
                             <div class="col-lg-6">
                                 <div class="content-wrapper">
