product faq add

--- a/product.html
+++ b/product.html
@@ -151,17 +151,30 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion">
+                        <div class="accordion accordion-s1">
                             <div class="accordion-item active">
-                                <div style="padding-right: 30px;"
-                                    class="accordion-header d-flex justify-content-between align-items-center">
-                                    <div class="d-flex align-items-center gap-1"><img src="./assets/faq-icon.svg"
-                                            width="22" height="20" alt="faq-icon"> <span class="d-block">Pick
+                                <div class="accordion-header">
+                                    <div class="d-flex align-items-center gap-3"><img src="./assets/faq-icon.svg"
+                                            width="20" height="20" alt="faq-icon"> <span class="d-block title">Pick
                                             Available</span>
                                     </div>
-                                    <img src="./assets/slick-arrow.svg" width="16" height="16" alt="">
+                                    <img src="./assets/slick-arrow.svg" class="arrow" width="12" height="12" alt="">
                                 </div>
                                 <div class="accordion-content show">
+                                    <p>Pickup available at 3850 Annapolis Ln N Suite 100
+                                        <b>Usually ready in 4 hours</b>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <div class="accordion-header">
+                                    <div class="d-flex align-items-center gap-3"><img src="./assets/faq-icon.svg"
+                                            width="20" height="20" alt="faq-icon"> <span class="d-block title">Pick
+                                            Available</span>
+                                    </div>
+                                    <img src="./assets/slick-arrow.svg" class="arrow" width="12" height="12" alt="">
+                                </div>
+                                <div class="accordion-content">
                                     <p>Pickup available at 3850 Annapolis Ln N Suite 100
                                         <b>Usually ready in 4 hours</b>
                                     </p>
